tests/conformance/shaclc/negative/percent-after-node-constraint.shaclc
PREFIX ex: <http://example.org/test#>

shape ex:TestShape {
	closed=true % ex:p 1 % .
}
